objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>AIA</fullName>
        <description>Sales process specific to AIA strategy opportunities</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Future Interest</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Follow Up Call Completed</fullName>
        </values>
        <values>
            <fullName>Paperwork Pending</fullName>
        </values>
        <values>
            <fullName>Proposal Completed</fullName>
        </values>
        <values>
            <fullName>Proposal Requested</fullName>
        </values>
        <values>
            <fullName>Won Funded</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Empower Leads</fullName>
        <description>This process is to track leads passed from ADU to RADU</description>
        <isActive>true</isActive>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Submitted</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Fiduciary Sales Stages</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Long List</fullName>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Short List</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Instututional Sub Advised</fullName>
        <description>Sales process used by the Institutional group for both new relationships and Capital Contributions. Note % probability updated by process builder for the related record type for Prospecting (1%) Long List (10%) Short List (25%)</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Long List</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Proposal</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Research</fullName>
        </values>
        <values>
            <fullName>Short List</fullName>
        </values>
        <values>
            <fullName>Won Funded</fullName>
        </values>
        <values>
            <fullName>Won Unfunded</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>NSFF</fullName>
        <description>Used for NSFF Opportunities specific to RADU</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Future Interest</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Introduction</fullName>
        </values>
        <values>
            <fullName>Paperwork Pending</fullName>
        </values>
        <values>
            <fullName>Presented</fullName>
        </values>
        <values>
            <fullName>Won Funded</fullName>
        </values>
        <values>
            <fullName>Won Unfunded</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>PRCG CPE Request</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Client</fullName>
        </values>
        <values>
            <fullName>Full Service Client</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Standard</fullName>
        <description>Basic opportunity screen not specific to any channel</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Long List</fullName>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Short List</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AffiliateCopiedValue__c</fullName>
        <description>Field not exposed in the UI but used for Institutional requirements to drive the Strategy pick list value by the Affiliate selected.  The Affiliate Look-up field can not be used to define dependent values so Affiliate look-up values are copied into this field to drive the Strategy values.</description>
        <label>Affiliate Copied Value</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ALPHA SIMPLEX</fullName>
                </value>
                <value>
                    <fullName>GATEWAY INVESTMENT ADVISERS</fullName>
                </value>
                <value>
                    <fullName>MIROVA</fullName>
                </value>
                <value>
                    <fullName>ABSOLUTE ASIA ASSET MANAGEMENT</fullName>
                </value>
                <value>
                    <fullName>AEW CAPITAL MANAGEMENT, L.P., TWO SEAPORT LANE</fullName>
                </value>
                <value>
                    <fullName>AURORA</fullName>
                </value>
                <value>
                    <fullName>CAPITAL GROWTH MANAGEMENT</fullName>
                </value>
                <value>
                    <fullName>CASPIAN CAPITAL MANAGEMENT, LLC</fullName>
                </value>
                <value>
                    <fullName>HARRIS ASSOCIATES L.P.</fullName>
                </value>
                <value>
                    <fullName>LOOMIS, SAYLES &amp; COMPANY</fullName>
                </value>
                <value>
                    <fullName>MCDONNELL INVESTMENT MANAGEMENT</fullName>
                </value>
                <value>
                    <fullName>NATIXIS ASSET MANAGEMENT</fullName>
                </value>
                <value>
                    <fullName>REICH AND TANG ASSET MANAGEMENT</fullName>
                </value>
                <value>
                    <fullName>SNYDER CAPITAL MANAGEMENT, L.P.</fullName>
                </value>
                <value>
                    <fullName>VAUGHAN NELSON INVESTMENT MANAGEMENT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AffiliatePicklist__c</fullName>
        <description>Used in the UI instead of the Affiliate look-up to control the 'Strategy' PIck list value for the Institutional layout and process.</description>
        <inlineHelpText>When ALPHA SIMPLEX, GATEWAY or MIROVA values are selected the associated Strategy values are filtered.</inlineHelpText>
        <label>Affiliate Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ABSOLUTE ASIA ASSET MANAGEMENT</fullName>
                </value>
                <value>
                    <fullName>AEW CAPITAL MANAGEMENT, L.P., TWO SEAPORT LANE</fullName>
                </value>
                <value>
                    <fullName>ALPHA SIMPLEX</fullName>
                </value>
                <value>
                    <fullName>AURORA</fullName>
                </value>
                <value>
                    <fullName>CAPITAL GROWTH MANAGEMENT</fullName>
                </value>
                <value>
                    <fullName>CASPIAN CAPITAL MANAGEMENT, LLC</fullName>
                </value>
                <value>
                    <fullName>GATEWAY INVESTMENT ADVISERS</fullName>
                </value>
                <value>
                    <fullName>HARRIS ASSOCIATES L.P.</fullName>
                </value>
                <value>
                    <fullName>LOOMIS, SAYLES &amp; COMPANY</fullName>
                </value>
                <value>
                    <fullName>MANAGED ACCOUNT ADVISORS</fullName>
                </value>
                <value>
                    <fullName>MCDONNELL INVESTMENT MANAGEMENT</fullName>
                </value>
                <value>
                    <fullName>MIROVA</fullName>
                </value>
                <value>
                    <fullName>NATIXIS ASSET MANAGEMENT</fullName>
                </value>
                <value>
                    <fullName>REICH AND TANG ASSET MANAGEMENT</fullName>
                </value>
                <value>
                    <fullName>SNYDER CAPITAL MANAGEMENT, L.P.</fullName>
                </value>
                <value>
                    <fullName>VAUGHAN NELSON INVESTMENT MANAGEMENT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Affiliate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Affiliate</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select an Affiliate record type.</errorMessage>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Affiliate</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Affiliate</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>PRCG Analyst assigned to the request.</inlineHelpText>
        <label>Analyst</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AssetClass__c</fullName>
        <label>Asset Class</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ALTERNATIVE</fullName>
                </value>
                <value>
                    <fullName>EQUITY</fullName>
                </value>
                <value>
                    <fullName>EQUITY-FIXED INCOME</fullName>
                </value>
                <value>
                    <fullName>FIXED INCOME</fullName>
                </value>
                <value>
                    <fullName>FIXED INCOME-MUNICIPAL</fullName>
                </value>
                <value>
                    <fullName>FIXED INCOME-TAXABLE</fullName>
                </value>
                <value>
                    <fullName>MMF</fullName>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Benchmark__c</fullName>
        <label>Benchmark</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BlendedBenchmark__c</fullName>
        <label>Blended Benchmark</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PRC</fullName>
                </value>
                <value>
                    <fullName>FA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CapitalContributions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked indicates that the Institutional Opportunity is not a new relationship but rather a capital contribution to an existing relationship. This 'restarts' the compensation clock for the relationship.</description>
        <label>Capital Contributions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Type__c</fullName>
        <description>AIA Case Type Picklist</description>
        <label>Case Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Concentrated Stock</fullName>
                </value>
                <value>
                    <fullName>Passive</fullName>
                </value>
                <value>
                    <fullName>Prospecting</fullName>
                </value>
                <value>
                    <fullName>Advisor</fullName>
                </value>
                <value>
                    <fullName>Direct to Plan Sponsor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Auto populates with the related Case when a PRCG CPE Opportunity is generated from Process Builder.</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <description>Used to filter opportunity reports</description>
        <formula>Owner.ActivityChannelName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consultant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Consulting Company that is working with the Firm/Office on the Opportunity</description>
        <inlineHelpText>Search for a Consulting Firm. All are visible in the Firm/Offices home page list, "Consulting Firm/Offices"</inlineHelpText>
        <label>Consultant</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please search for a Firm/Office of Type = Consultant</errorMessage>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Consultant</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Consultants</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Count_Primary__c</fullName>
        <label>Count Primary</label>
        <summaryFilterItems>
            <field>OpportunityProduct__c.Primary__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityProduct__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CreatedDatePlus14__c</fullName>
        <formula>datevalue(CreatedDate) +14</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date Plus 14</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CreatedDatePlus21__c</fullName>
        <formula>datevalue(CreatedDate) +21</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date Plus 21</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CreatedDatePlus7__c</fullName>
        <formula>datevalue(CreatedDate) +7</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date Plus 7</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExpectedFlows__c</fullName>
        <description>Populated as part of the Institutional Sub Advised new relationship process.</description>
        <label>Expected Flows</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FeeStructureRollUp__c</fullName>
        <description>A calculated field to determine the # of Fee Structure records are related to the Opportunity.</description>
        <label>Fee Structure RollUp</label>
        <summaryForeignKey>FeeStructure__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Firm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Firm</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Firm)</relationshipLabel>
        <relationshipName>FirmOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FundingRollUp__c</fullName>
        <description>Used to count the # of Funding records are related to the Opportunity</description>
        <label>Funding RollUp</label>
        <summaryForeignKey>Funding__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>HasIPMCase__c</fullName>
        <formula>IF( NumberOfIPMCases__c &gt; 0, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has IPM Case?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastActivityDate__c</fullName>
        <description>The Date of the last activity associated to the Opportunity</description>
        <inlineHelpText>This field automatically updates with the date of the last activity associated to the Opportunity.</inlineHelpText>
        <label>Last Activity</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mark_for_Deletion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to ID the opportunities created for the CPE process that should be deleted after testing and before roll out to Phase 2.</description>
        <label>Mark for Deletion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ModifiedDate__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>Load to this field the last modified date. Remove 2016.</description>
        <label>Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Modified__c</fullName>
        <description>Displays the last modified date on the compact layout in SF1.</description>
        <formula>"Modified: " &amp; 

/**Needs to show in mm/dd/yy format**/
TEXT(MONTH(DATEVALUE(LastModifiedDate))) &amp; "/" &amp;  TEXT(DAY(DATEVALUE(LastModifiedDate))) &amp; "/" &amp;  RIGHT(TEXT(YEAR(DATEVALUE(LastModifiedDate))),2)</formula>
        <label>Modified</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MyCoverageAccount__c</fullName>
        <description>TRUE if the account on the opportunity is covered by the user who is logged in, FALSE if the account is not.</description>
        <formula>Account.MyCoverage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If checked, this account on the opportunity is zoned to you or one of the external sales people you cover.</inlineHelpText>
        <label>My Coverage (Account)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MyCoverageContactRep__c</fullName>
        <description>TRUE if the contact on the opportunity is covered by the user who is logged in, FALSE if the contact is not.</description>
        <formula>RepContact__r.MyCoverage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If checked, the Contact Rep on this opportunity is covered by you or one of the external sales people you cover.</inlineHelpText>
        <label>My Coverage (Contact/Rep)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MyDUOpportunities__c</fullName>
        <formula>$User.ActivityRegionDept__c = OpportunityRegion__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My DU Opportunities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NatixisAdvisorProspect__c</fullName>
        <description>Formula to display the Opportunities related Contact's Natixis Advisor flag. This is used on the SDU Opportunity list views</description>
        <formula>RepContact__r.PrivateWealthProspect__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Natixis Advisor Prospect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NotModifiedCheckbox__c</fullName>
        <description>Used as input for NotModified__c image; added for reporting (exporting images results in URL)</description>
        <formula>IF(ModifiedDate__c &lt;= TODAY()- 30,TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Not Modified In 30 Days Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NotModifiedIn60Days__c</fullName>
        <description>Used in the DU Pipelines Dashboard reports to display opportunities not updated in 60 days based on the Last Modified Date field</description>
        <formula>IF(  DATEVALUE(LastModifiedDate)&lt;= TODAY()- 60,TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Not Modified In 60 Days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NotModified__c</fullName>
        <formula>IF(NotModifiedCheckbox__c, IMAGE("/servlet/servlet.FileDownload?file=015F0000004Lk2L", "*", 16, 16),"")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Not Modified in 30 Days</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberOfIPMCases__c</fullName>
        <description>Maintained by declarative rollup.  Counts the number of IPM Cases.  Used for checkbox that enables more advanced analysis of opportunities.</description>
        <label>Number Of IPM Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberofOpportunities__c</fullName>
        <description>Power of One field to aid in reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OODAccountId__c</fullName>
        <label>OOD Account Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OODContactId__c</fullName>
        <label>OOD Contact Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OODOwnerId__c</fullName>
        <externalId>true</externalId>
        <label>OOD Owner Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityCapitalContribution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This lookup stores the value of the original opportunity id documenting the new relationship. This ties the original opportunity to the subsequent capital contribution opportunity.</description>
        <label>Opportunity for Capital Contribution</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity for Capital Contribution</relationshipLabel>
        <relationshipName>OpportunitiesCapitalContribution</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OpportunityChannel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Channel</label>
        <referenceTo>Channel__c</referenceTo>
        <relationshipLabel>Opportunities (Opportunity Channel)</relationshipLabel>
        <relationshipName>ChannelOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OpportunityNameOwnerCloseDate__c</fullName>
        <description>Used primarily to allow grouping in reports and dashboards</description>
        <formula>Name &amp;  ": " &amp; Owner.LastName &amp;  " (" &amp;   TEXT(CloseDate) &amp; ")"</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Name, Owner, Close Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityProductText__c</fullName>
        <formula>Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Product Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityRegionDept__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the owner's activity territory's parent territory (either region or department) at time of create or update of Owner.  This value doesn't change when the owner changes roles (only when the actual owner changes or when the oppty is created).</description>
        <label>Opportunity Region/Dept</label>
        <referenceTo>Territory__c</referenceTo>
        <relationshipLabel>Opportunities (Opportunity Region)</relationshipLabel>
        <relationshipName>RegionOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OpportunityRegion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is set on insert and whenever owner change (or Touch__c changes).  It ALWAYS represents the Region of the user regardless of whether activity territory is at the region or territory level.</description>
        <label>Opportunity Region</label>
        <referenceTo>Territory__c</referenceTo>
        <relationshipLabel>Opportunities (Opportunity Region)</relationshipLabel>
        <relationshipName>RegionOpportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OpportunityTerritory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the owner's activity territory at time of create or update of Owner.  This value doesn't change when the owner changes roles (only when the actual owner changes or when the oppty is created).</description>
        <label>Opportunity Territory</label>
        <referenceTo>Territory__c</referenceTo>
        <relationshipLabel>Opportunities (Opportunity Territory)</relationshipLabel>
        <relationshipName>TerritoryOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Type__c</fullName>
        <description>ADU specific fields requested by Joe Labresh to track the source of the opportunity like big trades or retirement etc.</description>
        <inlineHelpText>Allocation - Large trades that are sales teams are working on
Retirement - Large retirement trades or Target Date Opportunities
PRCG Allocation - Large trades we are trying to get
Natixis Models - Morgan Stanley models, or Risk Efficient portfolios</inlineHelpText>
        <label>Opportunity Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Allocation</fullName>
                </value>
                <value>
                    <fullName>Retirement</fullName>
                </value>
                <value>
                    <fullName>PRCG Allocation</fullName>
                </value>
                <value>
                    <fullName>Natixis Models</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OwnerChannel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner Channel</label>
        <referenceTo>Channel__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OwnerDU__c</fullName>
        <formula>Owner.ActivityRegionDept__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner DU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerDepartment__c</fullName>
        <formula>Owner.Department</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerZone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner Zone</label>
        <referenceTo>Zone__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PRCGConsultant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PRCG Consultant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PlatformName__c</fullName>
        <label>Platform Name</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>PlatformProvider__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Access IPS Zero</fullName>
                </value>
                <value>
                    <fullName>Access OFA</fullName>
                </value>
                <value>
                    <fullName>Alliance</fullName>
                </value>
                <value>
                    <fullName>Aviator</fullName>
                </value>
                <value>
                    <fullName>Clear Direction</fullName>
                </value>
                <value>
                    <fullName>Clear Direction Custom</fullName>
                </value>
                <value>
                    <fullName>Clear Direction Select</fullName>
                </value>
                <value>
                    <fullName>Custom Key</fullName>
                </value>
                <value>
                    <fullName>Easy Start 401(k)</fullName>
                </value>
                <value>
                    <fullName>Emerging Market</fullName>
                </value>
                <value>
                    <fullName>Fee-Based</fullName>
                </value>
                <value>
                    <fullName>Fee-Based with Vanguard</fullName>
                </value>
                <value>
                    <fullName>Fidelity Advisor (FIIS)</fullName>
                </value>
                <value>
                    <fullName>Flexible Advantage</fullName>
                </value>
                <value>
                    <fullName>Framework</fullName>
                </value>
                <value>
                    <fullName>Group Annuity</fullName>
                </value>
                <value>
                    <fullName>Innovator Advantage</fullName>
                </value>
                <value>
                    <fullName>Institutional Market</fullName>
                </value>
                <value>
                    <fullName>Institutional - Open Architecture</fullName>
                </value>
                <value>
                    <fullName>Key 401(k)</fullName>
                </value>
                <value>
                    <fullName>Legacy NY Life</fullName>
                </value>
                <value>
                    <fullName>Maps Select</fullName>
                </value>
                <value>
                    <fullName>Mid Market</fullName>
                </value>
                <value>
                    <fullName>Open Architecture</fullName>
                </value>
                <value>
                    <fullName>Premier Key</fullName>
                </value>
                <value>
                    <fullName>Securian</fullName>
                </value>
                <value>
                    <fullName>Single Source</fullName>
                </value>
                <value>
                    <fullName>Smart Architecture</fullName>
                </value>
                <value>
                    <fullName>Standard Info</fullName>
                </value>
                <value>
                    <fullName>Total Retirement Services (TPS)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>